vt_cpulogos: Resize all terms/windows when tearing down logos

PR:		202288 (partial)
Tested by:	Jakob Alvermark
Reviewed by:	ed
Approved by:	markj (mentor)
Sponsored by:	EMC / Isilon Storage Division
Differential Revision:	https://reviews.freebsd.org/D3388


git-svn-id: svn+ssh://svn.freebsd.org/base/head@286997 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f